// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileProvider > renders children 1`] = `
<body>
  <div>
    <h1>
      Hello, world!
    </h1>
  </div>
</body>
`;

exports[`ProfileProvider > restores profile from storage 1`] = `
<body>
  <div>
    <h1>
      Hello, world!
    </h1>
  </div>
</body>
`;

exports[`ProfileSelect > displays empty string if no name is passed 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <div>
        Profile is missing.
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-1.5 rounded-md bg-white pl-3 pr-1 py-1.5 text-sm font-light text-gray-700 hover:bg-gray-50 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:re:"
        type="button"
      >
        <span>
          Profile
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`ProfileSelect > displays localhost if no host is passed 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-1.5 rounded-md bg-white pl-3 pr-1 py-1.5 text-sm font-light text-gray-700 hover:bg-gray-50 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:r8:"
        type="button"
      >
        <span>
          Profile
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`ProfileSelect > displays profile missing message 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <div>
        Profile is missing.
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-1.5 rounded-md bg-white pl-3 pr-1 py-1.5 text-sm font-light text-gray-700 hover:bg-gray-50 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:rk:"
        type="button"
      >
        <span>
          Profile
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`ProfileSelect > renders profiles with localhost when no host specified 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-1.5 rounded-md bg-white pl-3 pr-1 py-1.5 text-sm font-light text-gray-700 hover:bg-gray-50 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:r16:"
        type="button"
      >
        <span>
          Profile
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`ProfileSelect > renders with standard options 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-1.5 rounded-md bg-white pl-3 pr-1 py-1.5 text-sm font-light text-gray-700 hover:bg-gray-50 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:r2:"
        type="button"
      >
        <span>
          Profile
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;
